2001-03-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-exec-filter): Delete Prompt string with process output
	buffer.
	(w3m-w3m-check-header): Check 'HTTP/1.[01] 200' for valid
	'content-length'.
	(w3m-w3m-retrieve): Cygwin binary data support. Remove Prompt
	handling.

2001-03-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (emacs-w3m-version): New constant.
	(find-coding-system): Removed duplicated definition.
	(w3m-backlog-remove-oldest): Simplify.
	(w3m-search): Fix typo in function document.

2001-03-05  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m.el (w3m-anchor, w3m-image, w3m-action): Use defsubst.

2001-03-05  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m.el (and-let*): Removed
	(w3m-save-this-url): Updated.

2001-03-06  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-goto-previous-anchor): Fix mistake on merging
	w3-anchor patch. Cursor should go to beginning of anchor previous.
	(w3m-mode-map): Assign Shift-TAB key with w3m-previous-anchor.

2001-03-06  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (TOP): No need to load cl-macs explicitly.
	(w3m-charset-coding-system-alist): Do not use doloop in defcustom
	because it is not expanded in compile time.

2001-03-05  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el: apply patch from Keisuke Nishida.
	URL is hold in text property as already expanded.
	Some utility functions (w3m-anchor, w3m-image, w3m-action) is
	defined and used.
	(and-let*): New macro.
	(w3m-fontify-anchors): Hold expanded url in text property.
	(w3m-fontify-images): Likewise.
	(w3m-expand-url): Save matching data.
	Match pattern bug fix (by gotoh).
	(w3m-anchor): New function.
	(w3m-image): New function.
	(w3m-action): New function. (added by gotoh)
	(w3m-view-this-url): Use new functions to extract text prop.
	(w3m-mouse-view-this-url): Likewise.
	(w3m-download-this-url): Likewise.
	(w3m-print-this-url): Likewise.
	(w3m-save-this-url): Likewise.
	(w3m-goto-next-anchor): Likewise, and do not expand url.