@@ -1,3 +1,7 @@
+2001-03-07  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* w3m.el (w3m-exec-filter): Improved code to process prompt string.
+
 2001-03-06  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-exec-filter): Delete Prompt string with process output
